Add an example for using YOLO

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -15,8 +15,12 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.7.9 64-bit ('.venv')",
+   "metadata": {
+    "interpreter": {
+     "hash": "7b5e2a78f9c7166a3da6eececea51f4007ffd45b40b13f1c624525d75cb8326f"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -24,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# Model Garden を使った物体検出"
+    "# YOLO を使った物体検出"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -40,24 +44,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "work_dir = %pwd\n",
-    "\n",
-    "!mkdir -p $work_dir/.conan\n",
-    "%cd $work_dir/.conan\n",
-    "!conan install $work_dir\n",
-    "\n",
-    "%cd $work_dir/models/research\n",
-    "!$work_dir/.conan/protoc object_detection/protos/*.proto --python_out=.\n",
-    "!cp -f object_detection/packages/tf2/setup.py .\n",
-    "!pip install --use-feature=2020-resolver .\n",
-    "\n",
-    "%cd $work_dir"
+    "!pip install -r tensorflow-yolov4-tflite/requirements.txt"
    ]
   },
   {
@@ -76,11 +67,14 @@
     "# 適当な画像を用意する\n",
     "IMAGE_PATH = \"dog.jpg\"\n",
     "\n",
-    "# 使用するモデルの ID を model_urls.csv から選択\n",
-    "MODEL_ID = 27\n",
+    "# 入力データのサイズ\n",
+    "INPUT_SIZE = 416\n",
     "\n",
     "# 推論結果のスコアに対するしきい値\n",
-    "SCORE_THRESHOLD = 0.5"
+    "SCORE_THRESHOLD = 0.5\n",
+    "\n",
+    "# Non-Maximun Suppression における IoU のしきい値\n",
+    "IOU_THRESHOLD = 0.5"
    ]
   },
   {
@@ -96,19 +90,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "import tensorflow as tf\n",
-    "from object_detection.utils.label_map_util import create_category_index_from_labelmap\n",
     "import numpy as np\n",
+    "import cv2 as cv\n",
     "from PIL import Image, ImageDraw, ImageColor, ImageFont\n",
     "import certifi"
    ]
   },
   {
    "source": [
-    "## モデルをダウンロード"
+    "## モデルのダウンロード"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -129,26 +123,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"model_urls.csv\") as f:\n",
-    "     model_urls = list(csv.DictReader(f))"
+    "tf.keras.utils.get_file(\n",
+    "    fname=\"yolov4.cfg\",\n",
+    "    origin=\"https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.cfg\",\n",
+    "    cache_subdir=\"models/yolov4\",\n",
+    ")\n",
+    "model_dir = tf.keras.utils.get_file(\n",
+    "    fname=\"yolov4.weights\",\n",
+    "    origin=\"https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights\",\n",
+    "    cache_subdir=\"models/yolov4\",\n",
+    ")\n",
+    "model_dir = str(Path(model_dir).parent)\n",
+    "model_dir"
    ]
+  },
+  {
+   "source": [
+    "## モデルを SavedModel に変換"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
    "outputs": [],
    "source": [
-    "model_url = model_urls[MODEL_ID]\n",
-    "\n",
-    "model_dir = tf.keras.utils.get_file(\n",
-    "    fname=model_url[\"name\"],\n",
-    "    origin=model_url[\"url\"],\n",
-    "    untar=True,\n",
-    "    cache_subdir=\"models\",\n",
-    ")\n",
-    "model_dir = str(Path(model_dir) / \"saved_model\")\n",
-    "model_dir"
+    "!cd tensorflow-yolov4-tflite && python save_model.py --weights $model_dir/yolov4.weights --output $model_dir/saved_model --input_size $INPUT_SIZE --model yolov4"
    ]
   },
   {
@@ -164,10 +170,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.saved_model.load(model_dir)\n",
+    "model = tf.saved_model.load(str(Path(model_dir).joinpath(\"saved_model\")))\n",
     "infer = model.signatures[\"serving_default\"]\n",
     "\n",
-    "!saved_model_cli show --all --dir $model_dir"
+    "!saved_model_cli show --all --dir $model_dir/saved_model"
    ]
   },
   {
@@ -176,10 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_index = create_category_index_from_labelmap(\n",
-    "    \"models/research/object_detection/data/mscoco_label_map.pbtxt\",\n",
-    "    use_display_name=True,\n",
-    ")"
+    "with Path(model_dir).joinpath(\"coco.names\").open() as f:\n",
+    "    category_index = {id: {\"id\": id, \"name\": name.strip()} for id, name in enumerate(f)}"
    ]
   },
   {
@@ -196,8 +200,7 @@
    "outputs": [],
    "source": [
     "image = tf.io.read_file(IMAGE_PATH)\n",
-    "image = tf.io.decode_jpeg(image)\n",
-    "image.shape"
+    "image = tf.io.decode_jpeg(image)"
    ]
   },
   {
@@ -213,13 +216,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# モデルによっては float32 への変換が必要かも（入力層の dtype を確認）\n",
-    "#\n",
-    "# image = tf.image.convert_image_dtype(image, tf.float32)\n",
-    "\n",
-    "images = tf.stack([image], axis=0)\n",
-    "images.shape"
+    "images = tf.image.convert_image_dtype(image, tf.float32)\n",
+    "images = tf.image.resize(images, (INPUT_SIZE, INPUT_SIZE))\n",
+    "images = tf.stack([images])\n",
+    "images"
    ]
   },
   {
@@ -237,10 +237,40 @@
    "source": [
     "preds = infer(images)\n",
     "\n",
-    "num_detections = int(preds[\"num_detections\"][0])\n",
-    "boxes = preds[\"detection_boxes\"][0]\n",
-    "scores = preds[\"detection_scores\"][0]\n",
-    "labels = preds[\"detection_classes\"][0]\n",
+    "boxes = preds[\"tf_op_layer_concat_18\"][:, :, :4]\n",
+    "boxes = tf.stack([boxes], axis=2)\n",
+    "\n",
+    "scores = preds[\"tf_op_layer_concat_18\"][:, :, 4:]\n",
+    "\n",
+    "boxes.shape, scores.shape"
+   ]
+  },
+  {
+   "source": [
+    "## Non-Maximun Suppression"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boxes, scores, labels, num_detections = tf.image.combined_non_max_suppression(\n",
+    "    boxes,\n",
+    "    scores,\n",
+    "    max_output_size_per_class=50,\n",
+    "    max_total_size=50,\n",
+    "    score_threshold=SCORE_THRESHOLD,\n",
+    "    iou_threshold=IOU_THRESHOLD,\n",
+    ")\n",
+    "\n",
+    "boxes = boxes[0]\n",
+    "scores = scores[0]\n",
+    "labels = labels[0]\n",
+    "num_detections = int(num_detections[0])\n",
     "\n",
     "num_detections, boxes.shape, scores.shape, labels.shape"
    ]
