--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -15,8 +15,12 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.7.9 64-bit ('.venv')",
+   "metadata": {
+    "interpreter": {
+     "hash": "1186d4e9fc71bc68e5c236a61d6a16eabd05ebef8d3df8b6414dc4fb9c6b4b41"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -55,7 +59,7 @@
     "%cd $work_dir/models/research\n",
     "!$work_dir/.conan/protoc object_detection/protos/*.proto --python_out=.\n",
     "!cp -f object_detection/packages/tf2/setup.py .\n",
-    "!pip install --use-feature=2020-resolver .\n",
+    "!pip install .\n",
     "\n",
     "%cd $work_dir"
    ]
