--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -44,24 +44,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "mkdir -p .conan\n",
+    "cd .conan\n",
+    "conan install .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "tags": [
      "outputPrepend"
     ]
    },
    "outputs": [],
    "source": [
-    "work_dir = %pwd\n",
+    "%%bash\n",
     "\n",
-    "!mkdir -p $work_dir/.conan\n",
-    "%cd $work_dir/.conan\n",
-    "!conan install $work_dir\n",
+    "export PATH=$PWD/.conan:$PATH\n",
     "\n",
-    "%cd $work_dir/models/research\n",
-    "!$work_dir/.conan/protoc object_detection/protos/*.proto --python_out=.\n",
-    "!cp -f object_detection/packages/tf2/setup.py .\n",
-    "!pip install .\n",
-    "\n",
-    "%cd $work_dir"
+    "cd models/research\n",
+    "protoc object_detection/protos/*.proto --python_out=.\n",
+    "cp -f object_detection/packages/tf2/setup.py .\n",
+    "pip install ."
    ]
   },
   {
@@ -278,20 +289,16 @@
     "        continue\n",
     "\n",
     "    name = category_index[label][\"name\"]\n",
+    "    text = f\"{name}: {score * 100:.1f}%\"\n",
     "    y_min, x_min, y_max, x_max = boxes[i] * xy_scale\n",
     "\n",
-    "    draw.text((x_min, y_min), name, font=font, fill=color)\n",
+    "    print(f\"{name},{label},{score:.6f},{x_min:.6f},{y_min:.6f},{x_max:.6f},{y_max:.6f}\")\n",
+    "\n",
+    "    draw.text((x_min, y_min), text, font=font, fill=color)\n",
     "    draw.rectangle((x_min, y_min, x_max, y_max), outline=color, width=4)\n",
     "\n",
     "output_image"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
