--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -18,7 +18,7 @@
    "display_name": "Python 3.7.9 64-bit ('.venv')",
    "metadata": {
     "interpreter": {
-     "hash": "7b5e2a78f9c7166a3da6eececea51f4007ffd45b40b13f1c624525d75cb8326f"
+     "hash": "1186d4e9fc71bc68e5c236a61d6a16eabd05ebef8d3df8b6414dc4fb9c6b4b41"
     }
    }
   }
@@ -48,7 +48,10 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r tensorflow-yolov4-tflite/requirements.txt"
+    "%%bash\n",
+    "\n",
+    "cd tensorflow-yolov4-tflite\n",
+    "pip install -r requirements.txt"
    ]
   },
   {
@@ -148,13 +151,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "!cd tensorflow-yolov4-tflite && python save_model.py --weights $model_dir/yolov4.weights --output $model_dir/saved_model --input_size $INPUT_SIZE --model yolov4"
+    "!cd tensorflow-yolov4-tflite && python3 save_model.py --weights $model_dir/yolov4.weights --output $model_dir/saved_model --input_size $INPUT_SIZE --model yolov4"
    ]
   },
   {
@@ -306,18 +307,13 @@
     "    name = category_index[label][\"name\"]\n",
     "    y_min, x_min, y_max, x_max = boxes[i] * xy_scale\n",
     "\n",
+    "    print(f\"{name},{label},{score:.6f},{x_min:.6f},{y_min:.6f},{x_max:.6f},{y_max:.6f}\")\n",
+    "\n",
     "    draw.text((x_min, y_min), name, font=font, fill=color)\n",
     "    draw.rectangle((x_min, y_min, x_max, y_max), outline=color, width=4)\n",
     "\n",
     "output_image"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
