--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -228,12 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# モデルによっては float32 への変換が必要かも（入力層の dtype を確認）\n",
-    "#\n",
-    "# image = tf.image.convert_image_dtype(image, tf.float32)\n",
-    "\n",
-    "images = tf.stack([image], axis=0)\n",
+    "images = tf.expand_dims(image, axis=0)\n",
     "images.shape"
    ]
   },
