--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "images = tf.image.convert_image_dtype(image, tf.float32)\n",
     "images = tf.image.resize(images, (INPUT_SIZE, INPUT_SIZE))\n",
-    "images = tf.stack([images], axis=0)\n",
+    "images = tf.expand_dims(images, axis=0)\n",
     "images"
    ]
   },
