--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -28,14 +28,61 @@
  "cells": [
   {
    "source": [
-    "# Model Garden を使った物体検出"
+    "# TensorFlow Model Garden を使った物体検出"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## インストール"
+    "## インポート"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import certifi\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_hub as hub"
+   ]
+  },
+  {
+   "source": [
+    "## 可視化ツール\n",
+    "\n",
+    "検出したバウンディングボックスを可視化するために TensorFlow Object Detection API を使用します。\n",
+    "まずはリポジトリをクローンしてください。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "if [[ ! -d \"models\" ]]; then\n",
+    "    git clone --depth 1 https://github.com/tensorflow/models\n",
+    "fi"
+   ]
+  },
+  {
+   "source": [
+    "Object Detection API をインストールします。"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -59,9 +106,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -72,12 +117,12 @@
     "cd models/research\n",
     "protoc object_detection/protos/*.proto --python_out=.\n",
     "cp -f object_detection/packages/tf2/setup.py .\n",
-    "pip install ."
+    "pip install -q --upgrade ."
    ]
   },
   {
    "source": [
-    "## 定数"
+    "後に使用するモジュールをインポートします。"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -88,19 +133,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 適当な画像を用意する\n",
-    "IMAGE_PATH = \"dog.jpg\"\n",
-    "\n",
-    "# 使用するモデルの ID を model_urls.csv から選択\n",
-    "MODEL_ID = 27\n",
-    "\n",
-    "# 推論結果のスコアに対するしきい値\n",
-    "SCORE_THRESHOLD = 0.5"
+    "from object_detection.utils import label_map_util\n",
+    "from object_detection.utils import visualization_utils as viz_utils\n",
+    "from object_detection.utils import ops as utils_ops"
    ]
   },
   {
    "source": [
-    "## インポート"
+    "## ラベルマップデータをロード\n",
+    "\n",
+    "インデックスから物体のカテゴリ名を対応付けるラベルマップデータをロードします。"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -111,14 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from object_detection.utils.label_map_util import create_category_index_from_labelmap\n",
-    "import numpy as np\n",
-    "from PIL import Image, ImageDraw, ImageColor, ImageFont\n",
-    "import certifi"
+    "category_index = label_map_util.create_category_index_from_labelmap(\n",
+    "    \"models/research/object_detection/data/mscoco_label_map.pbtxt\",\n",
+    "    use_display_name=True,\n",
+    ")"
    ]
   },
   {
@@ -135,66 +173,12 @@
    "outputs": [],
    "source": [
     "# ダウンロードに失敗しないようにするためのおまじない\n",
-    "os.environ[\"SSL_CERT_FILE\"] = certifi.where()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"model_urls.csv\") as f:\n",
-    "     model_urls = list(csv.DictReader(f))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_url = model_urls[MODEL_ID]\n",
+    "os.environ[\"SSL_CERT_FILE\"] = certifi.where()\n",
     "\n",
-    "model_dir = tf.keras.utils.get_file(\n",
-    "    fname=model_url[\"name\"],\n",
-    "    origin=model_url[\"url\"],\n",
-    "    untar=True,\n",
-    "    cache_subdir=\"models\",\n",
-    ")\n",
-    "model_dir = str(Path(model_dir) / \"saved_model\")\n",
-    "model_dir"
-   ]
-  },
-  {
-   "source": [
-    "## モデルをロード"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = tf.saved_model.load(model_dir)\n",
-    "infer = model.signatures[\"serving_default\"]\n",
+    "# モデルのダウンロード先\n",
+    "os.environ[\"TFHUB_CACHE_DIR\"] = str(Path(\"~/.cache/tfhub_modules\").expanduser())\n",
     "\n",
-    "!saved_model_cli show --all --dir $model_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_index = create_category_index_from_labelmap(\n",
-    "    \"models/research/object_detection/data/mscoco_label_map.pbtxt\",\n",
-    "    use_display_name=True,\n",
-    ")"
+    "model = hub.load(\"https://tfhub.dev/tensorflow/faster_rcnn/inception_resnet_v2_640x640/1\")"
    ]
   },
   {
@@ -210,9 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = tf.io.read_file(IMAGE_PATH)\n",
-    "image = tf.io.decode_jpeg(image)\n",
-    "image.shape"
+    "image = Image.open(\"dog.jpg\")\n",
+    "image"
    ]
   },
   {
@@ -228,8 +211,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = tf.expand_dims(image, axis=0)\n",
-    "images.shape"
+    "images = np.asarray(image)\n",
+    "images = tf.expand_dims(images, axis=0)\n",
+    "images.shape, images.dtype"
    ]
   },
   {
@@ -245,14 +229,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = infer(images)\n",
+    "outputs = model(images)\n",
     "\n",
-    "num_detections = int(preds[\"num_detections\"][0])\n",
-    "boxes = preds[\"detection_boxes\"][0]\n",
-    "scores = preds[\"detection_scores\"][0]\n",
-    "labels = preds[\"detection_classes\"][0]\n",
+    "boxes = outputs[\"detection_boxes\"][0].numpy()\n",
+    "labels = outputs[\"detection_classes\"][0].numpy().astype(int)\n",
+    "scores = outputs[\"detection_scores\"][0].numpy()\n",
     "\n",
-    "num_detections, boxes.shape, scores.shape, labels.shape"
+    "for i in np.argsort(scores)[::-1][:20]:\n",
+    "    y_min, x_min, y_max, x_max = boxes[i]\n",
+    "    label = labels[i]\n",
+    "    score = scores[i]\n",
+    "    name = category_index[label][\"name\"]\n",
+    "\n",
+    "    if score <= 0.5:\n",
+    "        continue\n",
+    "\n",
+    "    print(f\"{name},{label},{score:.6f},{x_min:.6f},{y_min:.6f},{x_max:.6f},{y_max:.6f}\")"
    ]
   },
   {
@@ -268,30 +260,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_image = Image.open(IMAGE_PATH)\n",
+    "output_image = np.asarray(image).copy()\n",
     "\n",
-    "draw = ImageDraw.Draw(output_image)\n",
-    "color = ImageColor.getrgb(\"#E91E63\")\n",
-    "font = ImageFont.truetype(\"Monaco\", size=46)\n",
+    "viz_utils.visualize_boxes_and_labels_on_image_array(\n",
+    "    output_image,\n",
+    "    boxes,\n",
+    "    labels,\n",
+    "    scores,\n",
+    "    category_index,\n",
+    "    use_normalized_coordinates=True,\n",
+    ")\n",
     "\n",
-    "xy_scale = np.array([output_image.height, output_image.width, output_image.height, output_image.width])\n",
-    "\n",
-    "for i in range(num_detections):\n",
-    "    label = int(labels[i])\n",
-    "    score = scores[i]\n",
-    "\n",
-    "    if score <= SCORE_THRESHOLD:\n",
-    "        continue\n",
-    "\n",
-    "    name = category_index[label][\"name\"]\n",
-    "    text = f\"{name}: {score * 100:.1f}%\"\n",
-    "    y_min, x_min, y_max, x_max = boxes[i] * xy_scale\n",
-    "\n",
-    "    print(f\"{name},{label},{score:.6f},{x_min:.6f},{y_min:.6f},{x_max:.6f},{y_max:.6f}\")\n",
-    "\n",
-    "    draw.text((x_min, y_min), text, font=font, fill=color)\n",
-    "    draw.rectangle((x_min, y_min, x_max, y_max), outline=color, width=4)\n",
-    "\n",
+    "output_image = Image.fromarray(output_image)\n",
     "output_image"
    ]
   }
