--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -35,53 +35,6 @@
   },
   {
    "source": [
-    "## インストール"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "cd tensorflow-yolov4-tflite\n",
-    "pip install -r requirements.txt"
-   ]
-  },
-  {
-   "source": [
-    "## 定数"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 適当な画像を用意する\n",
-    "IMAGE_PATH = \"dog.jpg\"\n",
-    "\n",
-    "# 入力データのサイズ\n",
-    "INPUT_SIZE = 416\n",
-    "\n",
-    "# 推論結果のスコアに対するしきい値\n",
-    "SCORE_THRESHOLD = 0.5\n",
-    "\n",
-    "# Non-Maximun Suppression における IoU のしきい値\n",
-    "IOU_THRESHOLD = 0.5"
-   ]
-  },
-  {
-   "source": [
     "## インポート"
    ],
    "cell_type": "markdown",
@@ -96,11 +49,45 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "import tensorflow as tf\n",
+    "import certifi\n",
     "import numpy as np\n",
-    "import cv2 as cv\n",
-    "from PIL import Image, ImageDraw, ImageColor, ImageFont\n",
-    "import certifi"
+    "from PIL import Image, ImageDraw, ImageFont, ImageColor\n",
+    "\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "source": [
+    "## セットアップ"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "if [[ ! -d \"tensorflow-yolov4-tflite\" ]]; then\n",
+    "    git clone --depth 1 https://github.com/hunglc007/tensorflow-yolov4-tflite.git\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cd tensorflow-yolov4-tflite\n",
+    "pip install -q -r requirements.txt"
    ]
   },
   {
@@ -117,27 +104,20 @@
    "outputs": [],
    "source": [
     "# ダウンロードに失敗しないようにするためのおまじない\n",
-    "os.environ[\"SSL_CERT_FILE\"] = certifi.where()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "os.environ[\"SSL_CERT_FILE\"] = certifi.where()\n",
+    "\n",
     "tf.keras.utils.get_file(\n",
     "    fname=\"yolov4.cfg\",\n",
     "    origin=\"https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.cfg\",\n",
     "    cache_subdir=\"models/yolov4\",\n",
     ")\n",
-    "model_dir = tf.keras.utils.get_file(\n",
+    "tf.keras.utils.get_file(\n",
     "    fname=\"yolov4.weights\",\n",
     "    origin=\"https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights\",\n",
     "    cache_subdir=\"models/yolov4\",\n",
     ")\n",
-    "model_dir = str(Path(model_dir).parent)\n",
-    "model_dir"
+    "\n",
+    "print(\"Downloaded the model to ~/.keras/models/yolov4\")"
    ]
   },
   {
@@ -151,11 +131,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "outputPrepend"
+    ]
    },
    "outputs": [],
    "source": [
-    "!cd tensorflow-yolov4-tflite && python3 save_model.py --weights $model_dir/yolov4.weights --output $model_dir/saved_model --input_size $INPUT_SIZE --model yolov4"
+    "%%bash\n",
+    "\n",
+    "cd tensorflow-yolov4-tflite\n",
+    "python3 save_model.py --weights ~/.keras/models/yolov4/yolov4.weights --output ~/.keras/models/yolov4/saved_model --input_size 416 --model yolov4"
+   ]
+  },
+  {
+   "source": [
+    "## モデルの構造を確認"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "saved_model_cli show --all --dir ~/.keras/models/yolov4/saved_model"
+   ]
+  },
+  {
+   "source": [
+    "## ラベルマップデータをロード"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Path(\"~/.keras/models/yolov4/coco.names\").expanduser().open() as f:\n",
+    "    category_index = {id: {\"id\": id, \"name\": name.strip()} for id, name in enumerate(f)}"
    ]
   },
   {
@@ -171,20 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.saved_model.load(str(Path(model_dir).joinpath(\"saved_model\")))\n",
-    "infer = model.signatures[\"serving_default\"]\n",
-    "\n",
-    "!saved_model_cli show --all --dir $model_dir/saved_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with Path(model_dir).joinpath(\"coco.names\").open() as f:\n",
-    "    category_index = {id: {\"id\": id, \"name\": name.strip()} for id, name in enumerate(f)}"
+    "model_dir = Path(\"~/.keras/models/yolov4/saved_model\").expanduser()\n",
+    "model = tf.saved_model.load(str(model_dir))\n",
+    "infer = model.signatures[\"serving_default\"]"
    ]
   },
   {
@@ -200,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = tf.io.read_file(IMAGE_PATH)\n",
-    "image = tf.io.decode_jpeg(image)"
+    "image = Image.open(\"dog.jpg\")\n",
+    "image"
    ]
   },
   {
@@ -217,10 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = tf.image.convert_image_dtype(image, tf.float32)\n",
-    "images = tf.image.resize(images, (INPUT_SIZE, INPUT_SIZE))\n",
+    "images = image.resize((416, 416))\n",
+    "images = np.asarray(images, dtype=np.float32) / 255.0\n",
     "images = tf.expand_dims(images, axis=0)\n",
-    "images"
+    "images.shape, images.dtype"
    ]
   },
   {
@@ -236,12 +245,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = infer(images)\n",
+    "outputs = model(images)\n",
     "\n",
-    "boxes = preds[\"tf_op_layer_concat_18\"][:, :, :4]\n",
-    "boxes = tf.stack([boxes], axis=2)\n",
+    "boxes = outputs[:, :, :4]\n",
+    "boxes = tf.expand_dims(boxes, axis=2)\n",
     "\n",
-    "scores = preds[\"tf_op_layer_concat_18\"][:, :, 4:]\n",
+    "scores = outputs[:, :, 4:]\n",
     "\n",
     "boxes.shape, scores.shape"
    ]
@@ -262,10 +271,10 @@
     "boxes, scores, labels, num_detections = tf.image.combined_non_max_suppression(\n",
     "    boxes,\n",
     "    scores,\n",
-    "    max_output_size_per_class=50,\n",
-    "    max_total_size=50,\n",
-    "    score_threshold=SCORE_THRESHOLD,\n",
-    "    iou_threshold=IOU_THRESHOLD,\n",
+    "    max_output_size_per_class=20,\n",
+    "    max_total_size=20,\n",
+    "    score_threshold=0.5,\n",
+    "    iou_threshold=0.5,\n",
     ")\n",
     "\n",
     "boxes = boxes[0]\n",
@@ -289,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_image = Image.open(IMAGE_PATH)\n",
+    "output_image = image.copy()\n",
     "\n",
     "draw = ImageDraw.Draw(output_image)\n",
     "color = ImageColor.getrgb(\"#E91E63\")\n",
@@ -301,7 +310,7 @@
     "    label = int(labels[i])\n",
     "    score = scores[i]\n",
     "\n",
-    "    if score <= SCORE_THRESHOLD:\n",
+    "    if score <= 0.5:\n",
     "        continue\n",
     "\n",
     "    name = category_index[label][\"name\"]\n",
