--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -192,8 +192,7 @@
    "outputs": [],
    "source": [
     "model_dir = Path(\"~/.keras/models/yolov4/saved_model\").expanduser()\n",
-    "model = tf.saved_model.load(str(model_dir))\n",
-    "infer = model.signatures[\"serving_default\"]"
+    "model = tf.saved_model.load(str(model_dir))"
    ]
   },
   {
@@ -226,8 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = image.resize((416, 416))\n",
-    "images = np.asarray(images, dtype=np.float32) / 255.0\n",
+    "images = tf.image.convert_image_dtype(np.asarray(image), dtype=tf.float32)\n",
+    "images = tf.image.resize(images, (416, 416))\n",
     "images = tf.expand_dims(images, axis=0)\n",
     "images.shape, images.dtype"
    ]
@@ -247,9 +246,7 @@
    "source": [
     "outputs = model(images)\n",
     "\n",
-    "boxes = outputs[:, :, :4]\n",
-    "boxes = tf.expand_dims(boxes, axis=2)\n",
-    "\n",
+    "boxes = tf.expand_dims(outputs[:, :, :4], axis=2)\n",
     "scores = outputs[:, :, 4:]\n",
     "\n",
     "boxes.shape, scores.shape"
