Download coco.names

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Downloaded the model to ~/.keras/models/yolov4\n"
+     ]
+    }
+   ],
    "source": [
     "# ダウンロードに失敗しないようにするためのおまじない\n",
     "os.environ[\"SSL_CERT_FILE\"] = certifi.where()\n",
@@ -114,6 +122,11 @@
     "tf.keras.utils.get_file(\n",
     "    fname=\"yolov4.weights\",\n",
     "    origin=\"https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights\",\n",
+    "    cache_subdir=\"models/yolov4\",\n",
+    ")\n",
+    "tf.keras.utils.get_file(\n",
+    "    fname=\"coco.names\",\n",
+    "    origin=\"https://raw.githubusercontent.com/AlexeyAB/darknet/master/data/coco.names\",\n",
     "    cache_subdir=\"models/yolov4\",\n",
     ")\n",
     "\n",
