Pass weight_type

--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yolo.load_weights(\"weights/yolov4-tiny-final.weights\")\n",
+    "yolo.load_weights(\"weights/yolov4-tiny-final.weights\", weights_type=\"yolo\")\n",
     "output_images = []\n",
     "\n",
     "for i in range(1, 50):\n",
