--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -304,19 +304,23 @@
    "outputs": [],
    "source": [
     "yolo.load_weights(\"weights/yolov4-tiny-final.weights\", weights_type=\"yolo\")\n",
-    "output_images = []\n",
     "\n",
-    "for i in range(1, 50):\n",
-    "    image = Image.open(f\"dataset/test/{i:04}.jpg\")\n",
-    "    image = np.array(image)\n",
+    "with open(\"dataset/test/image_path.txt\") as f:\n",
+    "    output_images = []\n",
     "\n",
-    "    boxes = yolo.predict(image)\n",
-    "    output_image = yolo.draw_bboxes(image, boxes)\n",
-    "    output_image = Image.fromarray(output_image)\n",
+    "    for image_path in map(lambda x: f\"dataset/test/{x.strip()}\", f):\n",
+    "        print(image_path)\n",
     "\n",
-    "    output_images.append(output_image)\n",
+    "        image = Image.open(image_path)\n",
+    "        image = np.array(image)\n",
     "\n",
-    "output_images[0].save(\"out.gif\", save_all=True, append_images=output_images[1:], loop=0)"
+    "        boxes = yolo.predict(image)\n",
+    "        output_image = yolo.draw_bboxes(image, boxes)\n",
+    "        output_image = Image.fromarray(output_image)\n",
+    "\n",
+    "        output_images.append(output_image)\n",
+    "\n",
+    "    output_images[0].save(\"out.gif\", save_all=True, append_images=output_images[1:], loop=0)"
    ]
   }
  ]
