--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -97,8 +97,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "mkdir -p .conan\n",
-    "cd .conan\n",
+    "cd .venv\n",
     "conan install .."
    ]
   },
@@ -111,8 +110,6 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "\n",
-    "export PATH=$PWD/.conan:$PATH\n",
     "\n",
     "cd models/research\n",
     "protoc object_detection/protos/*.proto --python_out=.\n",
