--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -173,9 +173,9 @@
     "os.environ[\"SSL_CERT_FILE\"] = certifi.where()\n",
     "\n",
     "# モデルのダウンロード先\n",
-    "os.environ[\"TFHUB_CACHE_DIR\"] = str(Path(\"~/.cache/tfhub_modules\").expanduser())\n",
+    "os.environ[\"TFHUB_CACHE_DIR\"] = Path(\"~/.cache/tfhub_modules\").expanduser().as_posix()\n",
     "\n",
-    "model = hub.load(\"https://tfhub.dev/tensorflow/faster_rcnn/inception_resnet_v2_640x640/1\")"
+    "model = hub.load(\"https://tfhub.dev/tensorflow/ssd_mobilenet_v2/2\")"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "source": [
-    "## 画像データを正規化"
+    "## 画像データをテンソル化"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -228,14 +228,13 @@
    "source": [
     "outputs = model(images)\n",
     "\n",
-    "boxes = outputs[\"detection_boxes\"][0].numpy()\n",
-    "labels = outputs[\"detection_classes\"][0].numpy().astype(int)\n",
-    "scores = outputs[\"detection_scores\"][0].numpy()\n",
+    "boxes = outputs[\"detection_boxes\"][0]\n",
+    "labels = outputs[\"detection_classes\"][0]\n",
+    "scores = outputs[\"detection_scores\"][0]\n",
     "\n",
-    "for i in np.argsort(scores)[::-1][:20]:\n",
-    "    y_min, x_min, y_max, x_max = boxes[i]\n",
-    "    label = labels[i]\n",
-    "    score = scores[i]\n",
+    "for box, label, score in zip(boxes, labels, scores):\n",
+    "    y_min, x_min, y_max, x_max = box\n",
+    "    label = int(label)\n",
     "    name = category_index[label][\"name\"]\n",
     "\n",
     "    if score <= 0.5:\n",
@@ -261,9 +260,9 @@
     "\n",
     "viz_utils.visualize_boxes_and_labels_on_image_array(\n",
     "    output_image,\n",
-    "    boxes,\n",
-    "    labels,\n",
-    "    scores,\n",
+    "    boxes.numpy(),\n",
+    "    labels.numpy().astype(int),\n",
+    "    scores.numpy(),\n",
     "    category_index,\n",
     "    use_normalized_coordinates=True,\n",
     ")\n",
@@ -271,6 +270,13 @@
     "output_image = Image.fromarray(output_image)\n",
     "output_image"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
