--- a/yolo_opencv.ipynb
+++ b/yolo_opencv.ipynb
@@ -14,13 +14,9 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.9 64-bit ('.venv')",
-   "metadata": {
-    "interpreter": {
-     "hash": "1186d4e9fc71bc68e5c236a61d6a16eabd05ebef8d3df8b6414dc4fb9c6b4b41"
-    }
-   }
+   "name": "python37564bitvenvvenvacca52fa36cf462dba4e25ddfa41bad4",
+   "display_name": "Python 3.7.5 64-bit ('.venv': venv)",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -28,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "# YOLO を使った物体検出"
+    "# YOLO + OpenCV を使った物体検出"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -46,48 +42,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "import certifi\n",
     "import numpy as np\n",
-    "from PIL import Image, ImageDraw, ImageFont, ImageColor\n",
-    "\n",
+    "import cv2 as cv\n",
     "import tensorflow as tf"
-   ]
-  },
-  {
-   "source": [
-    "## セットアップ"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "if [[ ! -d \"tensorflow-yolov4-tflite\" ]]; then\n",
-    "    git clone --depth 1 https://github.com/hunglc007/tensorflow-yolov4-tflite.git\n",
-    "fi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "cd tensorflow-yolov4-tflite\n",
-    "pip install -q -r requirements.txt"
    ]
   },
   {
@@ -107,8 +67,8 @@
     "os.environ[\"SSL_CERT_FILE\"] = certifi.where()\n",
     "\n",
     "tf.keras.utils.get_file(\n",
-    "    fname=\"yolov4.cfg\",\n",
     "    origin=\"https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.cfg\",\n",
+    "    fname=\"yolov4.cfg\",\n",
     "    cache_subdir=\"models/yolov4\",\n",
     ")\n",
     "tf.keras.utils.get_file(\n",
@@ -123,47 +83,6 @@
     ")\n",
     "\n",
     "print(\"Downloaded the model to ~/.keras/models/yolov4\")"
-   ]
-  },
-  {
-   "source": [
-    "## モデルを SavedModel に変換"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "cd tensorflow-yolov4-tflite\n",
-    "python3 save_model.py --weights ~/.keras/models/yolov4/yolov4.weights --output ~/.keras/models/yolov4/saved_model --input_size 416 --model yolov4"
-   ]
-  },
-  {
-   "source": [
-    "## モデルの構造を確認"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "saved_model_cli show --all --dir ~/.keras/models/yolov4/saved_model"
    ]
   },
   {
@@ -196,8 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = Path(\"~/.keras/models/yolov4/saved_model\").expanduser()\n",
-    "model = tf.saved_model.load(str(model_dir))"
+    "model_dir = Path(\"~/.keras/models/yolov4\").expanduser()\n",
+    "config_path = model_dir.joinpath(\"yolov4.cfg\")\n",
+    "weights_path = model_dir.joinpath(\"yolov4.weights\")\n",
+    "\n",
+    "model = cv.dnn.readNetFromDarknet(str(config_path), str(weights_path))"
    ]
   },
   {
@@ -213,8 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = Image.open(\"dog.jpg\")\n",
-    "image"
+    "image = cv.imread(\"dog.jpg\")"
    ]
   },
   {
@@ -230,9 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = tf.image.convert_image_dtype(np.asarray(image), dtype=tf.float32)\n",
-    "images = tf.image.resize(images, (416, 416))\n",
-    "images = tf.expand_dims(images, axis=0)\n",
+    "images = cv.dnn.blobFromImage(image, scalefactor=1 / 255, size=(416, 416), swapRB=True)\n",
     "images.shape, images.dtype"
    ]
   },
@@ -249,17 +168,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = model(images)\n",
+    "out_layers_names = model.getUnconnectedOutLayersNames()\n",
     "\n",
-    "boxes = tf.expand_dims(outputs[:, :, :4], axis=2)\n",
-    "scores = outputs[:, :, 4:]\n",
+    "model.setInput(images)\n",
+    "outputs = model.forward(out_layers_names)\n",
+    "outputs = np.vstack(outputs)\n",
     "\n",
-    "boxes.shape, scores.shape"
+    "raw_boxes = []\n",
+    "raw_scores = []\n",
+    "raw_labels = []\n",
+    "\n",
+    "for output in outputs:\n",
+    "    label = np.argmax(output[5:])\n",
+    "    score = output[5:][label]\n",
+    "\n",
+    "    x_center, y_center, width, height = output[:4]\n",
+    "    x_min, y_min = x_center - width / 2, y_center - height / 2\n",
+    "\n",
+    "    x_min = 0.0 if x_min < 0.0 else x_min\n",
+    "    y_min = 0.0 if y_min < 0.0 else y_min\n",
+    "\n",
+    "    raw_boxes.append([x_min, y_min, width, height])\n",
+    "    raw_scores.append(score)\n",
+    "    raw_labels.append(label)\n",
+    "\n",
+    "indices = np.argsort(raw_scores)[::-1]\n",
+    "\n",
+    "raw_boxes = np.array(raw_boxes)[indices]\n",
+    "raw_scores = np.array(raw_scores)[indices]\n",
+    "raw_labels = np.array(raw_labels)[indices]\n",
+    "\n",
+    "raw_boxes.shape, raw_scores.shape, raw_labels.shape"
    ]
   },
   {
    "source": [
-    "## Non-Maximun Suppression"
+    "## Non-Maximum Suppression"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -270,21 +214,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxes, scores, labels, num_detections = tf.image.combined_non_max_suppression(\n",
-    "    boxes,\n",
-    "    scores,\n",
-    "    max_output_size_per_class=20,\n",
-    "    max_total_size=20,\n",
+    "# NumPy 配列を渡すとハングアップするので .tolist() で Python リストに変換する\n",
+    "indices = cv.dnn.NMSBoxes(\n",
+    "    raw_boxes.tolist(),\n",
+    "    raw_scores.tolist(),\n",
     "    score_threshold=0.5,\n",
-    "    iou_threshold=0.5,\n",
+    "    nms_threshold=0.5,\n",
     ")\n",
     "\n",
-    "boxes = boxes[0]\n",
-    "scores = scores[0]\n",
-    "labels = labels[0]\n",
-    "num_detections = int(num_detections[0])\n",
+    "indices = indices.flatten()\n",
     "\n",
-    "num_detections, boxes.shape, scores.shape, labels.shape"
+    "boxes = raw_boxes[indices]\n",
+    "scores = raw_scores[indices]\n",
+    "labels = raw_labels[indices]\n",
+    "\n",
+    "boxes.shape, scores.shape, labels.shape"
    ]
   },
   {
@@ -302,29 +246,31 @@
    "source": [
     "output_image = image.copy()\n",
     "\n",
-    "draw = ImageDraw.Draw(output_image)\n",
-    "color = ImageColor.getrgb(\"#E91E63\")\n",
-    "font = ImageFont.truetype(\"Monaco\", size=46)\n",
+    "height, width = output_image.shape[:2]\n",
+    "xy_scale = np.array([width, height, width, height])\n",
     "\n",
-    "xy_scale = np.array([output_image.height, output_image.width, output_image.height, output_image.width])\n",
-    "\n",
-    "for i in range(num_detections):\n",
-    "    label = int(labels[i])\n",
-    "    score = scores[i]\n",
-    "\n",
-    "    if score <= 0.5:\n",
-    "        continue\n",
+    "for box, score, label in zip(boxes, scores, labels):\n",
+    "    box = box * xy_scale\n",
+    "    x_min, y_min, width, height = box.astype(int).tolist()\n",
+    "    x_max, y_max = x_min + width, y_min + height\n",
     "\n",
     "    name = category_index[label][\"name\"]\n",
-    "    y_min, x_min, y_max, x_max = boxes[i] * xy_scale\n",
+    "    text = f\"{name}: {score * 100:.1f}%\"\n",
     "\n",
-    "    print(f\"{name},{label},{score:.6f},{x_min:.6f},{y_min:.6f},{x_max:.6f},{y_max:.6f}\")\n",
+    "    print(f\"{name},{label},{score:.6f},{x_min},{y_min},{x_max},{y_max}\")\n",
     "\n",
-    "    draw.text((x_min, y_min), name, font=font, fill=color)\n",
-    "    draw.rectangle((x_min, y_min, x_max, y_max), outline=color, width=4)\n",
+    "    cv.putText(output_image, text, (x_min, y_min), cv.FONT_HERSHEY_SIMPLEX, fontScale=1, color=(0, 0, 255))\n",
+    "    cv.rectangle(output_image, (x_min, y_min, width, height), color=(0, 0, 255))\n",
     "\n",
-    "output_image"
+    "cv.imwrite(\"output.jpg\", output_image)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
