--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -100,7 +100,7 @@
     "cd models/research\n",
     "protoc object_detection/protos/*.proto --python_out=.\n",
     "cp -f object_detection/packages/tf2/setup.py .\n",
-    "pip install -q ."
+    "pip install -q -U ."
    ]
   },
   {
