--- a/yolo_tensorflow.ipynb
+++ b/yolo_tensorflow.ipynb
@@ -87,7 +87,7 @@
     "%%bash\n",
     "\n",
     "cd tensorflow-yolov4-tflite\n",
-    "pip install -q -r requirements.txt"
+    "pip install -q -U -r requirements.txt"
    ]
   },
   {
