--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -35,6 +35,24 @@
   },
   {
    "source": [
+    "## インストール"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pip install yolov4"
+   ]
+  },
+  {
+   "source": [
     "## インポート"
    ],
    "cell_type": "markdown",
